# django-table-archive

./: .gitignore  README.md  README.rst  setup.cfg
django_table_archive/management/commands/: archive.py
